--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <!--mybatis插件-->
+        <dependency>
+            <groupId>com.github.misterchangray.mybatis.generator.plugins</groupId>
+            <artifactId>myBatisGeneratorPlugins</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
