--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,11 @@
-server.context-path = /springboot-mybatis
+server.context-path = /transaction-message-demo
 
 #公共配置与Profiles选择无关
-#mybatis.type-aliases-package=com.demo.entity
-mybatis.mapper-locations=classpath*:com/demo/mapper/*.xml
+mybatis.mapper-locations=classpath*:mybatis/mapper/*.xml
 
 #数据库配置
-spring.datasource.url=jdbc:mysql://121.196.211.196:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/transaction-message
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-
-#redis配置
-redis.host=r-bp1a1f992fb88574.redis.rds.aliyuncs.com
-redis.port=6379
-redis.password=L00easy1db2uat3redis
-redis.maxActive=50
-redis.maxIdle=50
-redis.testOnBorrow=true
-redis.testWhileIdle=true
-redis.maxWait=60000
-redis.timeout=10000
-redis.db=20
