--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,5 @@ mybatis.mapper-locations=classpath*:mybatis/mapper/*.xml
 # ˝æ›ø‚≈‰÷√
 spring.datasource.url=jdbc:mysql://localhost:3306/transaction-message
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.password=123456
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
